Fixed tiny typo encountered when visiting the site

--- a/views/index.html
+++ b/views/index.html
@@ -102,7 +102,7 @@
       <h3>JSON API</h3>
 
       <p>
-	The server provides a JSON API throught HTTP as well:
+	The server provides a JSON API through HTTP as well:
 	<pre><code>$ curl https://cranlogs.r-pkg.org/downloads/total/last-week/ggplot2
 	  <span class="output">
 [
